--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
             </div>
             <div class="tab-pane fade" id="nav-settings" role="tabpanel" aria-labelledby="nav-settings-tab">
-              <div onclick="appReset()" class="btn o_secundary">Hard reset</div>
+              <div onclick="appReset()" class="btn o_secondary">Hard reset</div>
             </div>
           </div>
         </div>
@@ -306,16 +306,16 @@
       <div class="card">
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nav-claims-tab" data-toggle="tab" href="#nav-claims" role="tab" aria-controls="nav-claims" aria-selected="true">Emit claims</a>
+            <a class="nav-item nav-link" id="nav-claims-tab" data-toggle="tab" href="#nav-claims" role="tab" aria-controls="nav-claims" aria-selected="true">Emit claims</a>
             <a class="nav-item nav-link" id="nav-nameserver-tab" data-toggle="tab" href="#nav-nameserver" role="tab" aria-controls="nav-nameserver" aria-selected="false">Name server</a>
             <a class="nav-item nav-link" id="nav-signatures-tab" data-toggle="tab" href="#nav-signatures" role="tab" aria-controls="nav-signatures" aria-selected="false">Signatures & Login</a>
             <a class="nav-item nav-link" id="nav-txforwarder-tab" data-toggle="tab" href="#nav-txforwarder" role="tab" aria-controls="nav-txforwarder" aria-selected="false">tx-forwarder</a>
-            <a class="nav-item nav-link" id="nav-zkproofs-tab" data-toggle="tab" href="#nav-zkproofs" role="tab" aria-controls="nav-zkproofs" aria-selected="false">zkProofs</a>
+            <a class="nav-item nav-link active" id="nav-zkproofs-tab" data-toggle="tab" href="#nav-zkproofs" role="tab" aria-controls="nav-zkproofs" aria-selected="false">zkProofs</a>
           </div>
         </nav>
         <div class="card-body">
           <div class="tab-content" id="navActions-content">
-            <div class="tab-pane fade show active" id="nav-claims" role="tabpanel" aria-labelledby="nav-claims-tab">
+            <div class="tab-pane fade" id="nav-claims" role="tabpanel" aria-labelledby="nav-claims-tab">
               <h5 class="card-title">Claims Actions</h5>
               <hr>
             </div>
@@ -358,10 +358,30 @@
               <a onclick="sendTxToTxForwarder()" class="btn btn-primary o_primary">Send Tx</a>
               <div id="txforwarder-result"></div>
             </div>
-            <div class="tab-pane fade" id="nav-zkproofs" role="tabpanel" aria-labelledby="nav-zkproofs-tab">
-              <h5 class="card-title">zkProofs</h5>
+            <div class="tab-pane fade show active" id="nav-zkproofs" role="tabpanel" aria-labelledby="nav-zkproofs-tab">
+              <h5 class="card-title">Write circuit</h5>
               <hr>
-              <p class="card-text">Generate and verify ZKP</p>
+              <textarea id="inputCircuit" rows="3" style="width:100%;" class="textarea-blue" placeholder="write your circuit here"></textarea>
+              <a onclick="loadCircuit()" class="btn btn-primary o_primary">Compile circuit</a>
+	      <br><br>
+              <textarea id="compiledCircuitOutput" rows="3" style="width:100%;" class="textarea-blue" placeholder="compiled circuit will appear here"></textarea>
+              <a onclick="calculateSetup()" class="btn btn-primary o_secondary">Calculate setup</a>
+	      <br><br>
+              <textarea id="provingKeyOutput" rows="3" style="width:45%;" class="textarea-blue" placeholder="proving key"></textarea>
+              <textarea id="verificationKeyOutput" rows="3" style="width:45%;" class="textarea-blue" placeholder="verification key"></textarea>
+              <a onclick="calculateSetup()" class="btn btn-primary o_primary">Calculate witness</a>
+	      <br><br>
+              <textarea id="witnessOutput" rows="3" style="width:100%;" class="textarea-blue" placeholder="Witness output"></textarea>
+	      <br><br>
+              <h5 class="card-title">Generate Proof</h5>
+              <hr>
+              <textarea id="circuitInputs" rows="3" style="width:100%;" class="textarea-blue" placeholder="circuit inputs"></textarea>
+              <a onclick="generateProof()" class="btn btn-primary o_primary">Generate Proof</a>
+	      <br><br>
+              <h5 class="card-title">Verify ZKP</h5>
+              <hr>
+              <textarea id="proofOutput" rows="3" style="width:100%;" class="textarea-blue" placeholder="zkProof will be printed here"></textarea>
+              <a onclick="verifyProof()" class="btn btn-primary o_primary">Verify Proof</a>
             </div>
           </div>
         </div>
